// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fetches stations and displays them 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <MockMapView
    onPress={[Function]}
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <MockMarker
      coordinate={
        Object {
          "latitude": 1,
          "latitudeDelta": 3,
          "longitude": 2,
          "longitudeDelta": 4,
        }
      }
    />
  </MockMapView>
</View>
`;

exports[`renders a trip with marker in location and destination 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <MapView
    onPress={[Function]}
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View>
      <Marker
        coordinate={
          Object {
            "latitude": 99,
            "longitude": 99,
          }
        }
        pinColor="blue"
      />
      <Marker
        coordinate={
          Object {
            "latitude": 199,
            "longitude": 199,
          }
        }
      />
    </View>
  </MapView>
</View>
`;
